[package]
name = "cribbage"
version = "0.1.0"
edition = "2021"
description = "A program to play Cribbage on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0.1.4"
bytes = "1.4.0"
clap = { version = "4.1.9", features = ["derive"] }
